[gd_scene format=3 uid="uid://te6dppg2iv17"]

[ext_resource type="Script" uid="uid://oxqpmgh17sie" path="res://Scripts/Core/game_root.gd" id="1_root"]
[ext_resource type="Script" uid="uid://c0wkox420sl04" path="res://Scripts/GameRootUi/title_screen.gd" id="2_ts"]

[node name="GameRoot" type="Node" unique_id=488423518]
script = ExtResource("1_root")

[node name="ModeHost" type="Node" parent="." unique_id=525468059]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1740917996]

[node name="TitleScreen" type="Control" parent="CanvasLayer" unique_id=962188764]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ts")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/TitleScreen" unique_id=2142922389]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -89.5
offset_right = 57.5
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/TitleScreen/CenterContainer" unique_id=198849481]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TitleScreen/CenterContainer/PanelContainer" unique_id=1981380655]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/TitleScreen/CenterContainer/PanelContainer/VBoxContainer" unique_id=23700803]
layout_mode = 2
text = "게임 제목 (임시)"

[node name="NewGameButton" type="Button" parent="CanvasLayer/TitleScreen/CenterContainer/PanelContainer/VBoxContainer" unique_id=1858344122]
layout_mode = 2
text = "새 게임"

[node name="ContinueButton" type="Button" parent="CanvasLayer/TitleScreen/CenterContainer/PanelContainer/VBoxContainer" unique_id=1107918325]
layout_mode = 2
disabled = true
text = "이어하기"

[node name="SettingsButton" type="Button" parent="CanvasLayer/TitleScreen/CenterContainer/PanelContainer/VBoxContainer" unique_id=528978633]
layout_mode = 2
text = "설정"

[node name="QuitButton" type="Button" parent="CanvasLayer/TitleScreen/CenterContainer/PanelContainer/VBoxContainer" unique_id=786029380]
layout_mode = 2
text = "종료"

[node name="FadeRect" type="ColorRect" parent="CanvasLayer" unique_id=2101105397]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)
